--- a/src/Jenkinsfile
+++ b/src/Jenkinsfile
@@ -1,10 +1,41 @@
 pipeline {
-    agent { docker { image 'maven:3.3.3' } }
-    stages {
-        stage('build') {
+    agent any
+    parameters {
+        choice(name: 'DEPLOY_ENV', choices: ['int', 'stage', 'test', 'prod'],  description: 'The target environment to deploy artifacts')
+    }
+    stages {       
+        stage('Building project, running tests and publishing test results') {
+            agent { 
+                docker{ image 'maven:3.3.3' }
+            }   
             steps {
-                sh 'mvn --version'
+                sh 'mvn clean install'
             }
-        }
+            post {
+                always {            
+                    junit 'target/surefire-reports/*.xml'
+                    publishHTML([
+                    allowMissing          : false,
+                    alwaysLinkToLastBuild : false,
+                    keepAll               : true,
+                    reportDir             : 'target/site/jacoco/',
+                    reportFiles           : 'index.html',
+                    reportTitles          : "Tests coverage",
+                    reportName            : "Tests coverage"
+                    ])
+                }
+                success {
+                    archive "target/FortuneTellerAdambLukasaAllenj-1.0-SNAPSHOT.war"
+                }
+            } 
+        }         
+       
+        stage('Deploying artifacts to selected target'){
+            agent any
+            steps{
+                sh 'export PATH=/opt/glassfish-4.1.1/bin/asadmin:$PATH'
+                sh 'asadmin --port 4848 deploy --force --name FortuneTellerAdambLukasaAllenj-${DEPLOY_ENV} --contextroot FortuneTellerAdambLukasaAllenj-${DEPLOY_ENV} target/FortuneTellerAdambLukasaAllenj-1.0-SNAPSHOT.war'
+            }
+        } 
     }
 }
