--- a/src/Jenkinsfile
+++ b/src/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
     stages {       
         stage('Building project, running tests and publishing test results') {
             agent { 
-                docker{ image 'maven:3.3.3' }
+                docker{ image 'rasilva1986/java-maven:alm' }
             }   
             steps {
                 sh 'mvn clean install'
